# baby-growth-video

./: .gitignore  README.md  index.html  overview.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  vite.config.ts  vitest.config.ts
.github/workflows/: build.yml
docs/: STATUS.md  ai-agnes-video-phase5.md  ai-transition-frames-phase4.md  architecture-blueprint.md  ui-design-spec-v1.md
docs/ai/: ai-transition-frames-design.md  ai-transition-frames-implementation.md  ai-transition-frames-phase3.md  ai-transition-frames-ui-delivery.md
docs/design/: architecture-blueprint.md  photo-selection-flow.html  ui-design-spec-v2.md
docs/dist-backup-20260629/: index.html
docs/dist-backup-20260629/assets/: index-kj3NI4p1.css
docs/plans/: 2026-06-24-baby-growth-video-mvp.md  2026-06-24-create-project-wizard.md  2026-06-29-pending-panel-redesign.md  2026-06-29-photo-virtual-scroll.md
docs/reports/: scan-parallel-diff-2026-06-29.md  ui-modernization-v2-report.md  wizard-redesign-report.md
docs/specs/: 2026-06-24-create-project-wizard-design.md  2026-06-26-scan-log-persistence-design.md  2026-06-29-photo-virtual-scroll-design.md  2026-06-30-period-photo-selection-design.md  2026-06-30-ux-interaction-audit-design.md
docs/superpowers/plans/: 2026-06-25-scan-log.md  (+12 more)
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/docs/superpowers/plans/: 2026-07-01-fast-thumbnail-plan.md
src-tauri/docs/superpowers/specs/: 2026-07-01-fast-thumbnail-design.md
src-tauri/icons/: icon.icns
src-tauri/src/: agnes.rs  ai.rs  collage.rs  db.rs  main.rs  media.rs  thumbnail.rs  video.rs
src/components/: CollageWorkspace.pointer.test.tsx  CollageWorkspace.tsx  ConfirmModal.tsx  ErrorBoundary.tsx  Layout.tsx  MusicLibrary.tsx  PendingSelectionPanel.tsx  PeriodTimeline.tsx  PhotoCard.tsx  PhotoContextMenu.tsx  ScanLogPanel.tsx  TemplateSelector.tsx  ThumbnailCard.tsx  ThumbnailGrid.tsx  ThumbnailPreviewModal.tsx  ToastContainer.tsx  VideoFramePlayer.tsx  VideoFrameSettingsModal.tsx  VideoFrameViewerModal.tsx  VirtualPhotoGrid.tsx  WizardSidebar.tsx
src/hooks/: usePhotoGridLayout.ts
src/pages/: BabySetupPage.tsx  CreateProjectPage.tsx  HistoryPage.tsx  HomePage.tsx  PeriodSelectPage.tsx  ProjectOverviewPage.tsx  ProjectPage.tsx  SettingsPage.tsx  VideoGeneratePage.tsx
src/store/: createProjectStore.ts  index.ts  toastStore.ts
src/types/: index.ts  react-window.d.ts
src/utils/: collageGesture.test.ts  collageGesture.ts  collageTemplates.ts  download.ts  tauriCommands.ts
ui/: collage-templates.html  color-audit.html  icon-showcase.html  index.html  overview-period-status.md  overview.md
(+33 files in other folders)
