[package]
name = "baby-growth-video"
version = "0.1.0"
description = "宝宝成长视频制作工具"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["custom-protocol"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.3"
image = "0.25"
imageproc = "0.25"
rusttype = "0.9"
uuid = { version = "1.0", features = ["v4"] }
regex = "1.10"
dirs-next = "2.0"
lazy_static = "1.4"
rayon = "1.8"
urlencoding = "2.1"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"], default-features = false }
ab_glyph = "0.2"
fast_image_resize = { version = "6", features = ["image"] }
zip = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
